# my-agent

./: justfile
.claude/agents/: listen-drive-and-steer-system-prompt.md
.claude/commands/: listen-drive-and-steer-user-prompt.md
.claude/skills/steer/: SKILL.md
apps/direct/: client.py  main.py
apps/listen/: main.py  worker.py
apps/steer-linux/: main.py  pyproject.toml
apps/steer-linux/backends/: base.py  detect.py  hyprland.py
apps/steer-linux/commands/: apps.py  click_cmd.py  clipboard.py  drag.py  find_cmd.py  focus.py  hotkey.py  ocr_cmd.py  screens.py  scroll.py  see.py  type_cmd.py  wait.py  window.py
apps/steer-linux/modules/: accessibility.py  clipboard_ctl.py  element_store.py  errors.py  input.py  models.py  ocr_engine.py  output.py
